only top individuals are considered for fitness methods above threshold and top